# numpy_for_cpp

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml
include/: matrix.hpp
src/: matrix.cpp  matrix.tpp
tests/: test_matrix.cpp
